# Guard-and-Towers-AI

./: .gitignore  CMakeLists.txt  README.md
bench/: bench_MMAB.cpp  bench_PVS_TT.cpp  bench_movegen.cpp
gat-gameserver/: 00143011.txt  00149779.txt  00170688.txt  0017769.txt  0020333.txt  00234231.txt  00238362.txt  0025866.txt  00267066.txt  00275977.txt  00279669.txt  00310362.txt  00343624.txt  00365324.txt  00399715.txt  0041971.txt  00422250.txt  0044856.txt  00478331.txt  00483082.txt  00489674.txt  00508562.txt  00517916.txt  00559942.txt  0061186.txt  00641891.txt  00701267.txt  00793630.txt  00813127.txt  0088629.txt  00890629.txt  0092500.txt  00957891.txt  0097816.txt  01149692.txt  01188548.txt  01220360.txt  01236923.txt  01265415.txt  0131465.txt  (+21 more)
gui/: CMakeLists.txt  main.cpp
gui/pages/: AIVsAIConfigPage.cpp  AIVsAIConfigPage.hpp  CMakeLists.txt  GamePage.hpp  GamePage_ctor.cpp  GamePage_events.cpp  GamePage_render.cpp  NetworkConfigPage.cpp  NetworkConfigPage.hpp  NetworkConnector.cpp  NetworkConnector.hpp  PvEConfigPage.cpp  PvEConfigPage.hpp  StartPage.cpp  StartPage.hpp
gui/ui/: Button.cpp  Button.hpp  CMakeLists.txt  ComboBox.cpp  ComboBox.hpp  TextField.cpp  TextField.hpp
src/: Board.cpp  Board.hpp  FEN.cpp  FEN.hpp  MoveGenerator.cpp  MoveGenerator.hpp  NetworkClient.cpp  console_game.cpp  console_main.cpp
src/ai/: AI.hpp  AIRegistry.hpp  AlphaBetaAI.cpp  AlphaBetaAI.hpp  CMakeLists.txt  MinimaxAI.cpp  MinimaxAI.hpp  MonteCarloAI.cpp  MonteCarloAI.hpp  PVSAI.cpp  PVSAI.hpp  RandomAI.cpp  RandomAI.hpp  TT_PVSAI.cpp  TT_PVSAI.hpp  TranspositionTableAI.cpp  TranspositionTableAI.hpp
tests/: perft.cpp  test_board.cpp
